--- a/backend_mern/.env
+++ b/backend_mern/.env
@@ -1,3 +1,3 @@
 MONGODB_URI = mongodb+srv://thakurashishsingh2004:7OPngsmRlT3EMy32@mern.unfxxsu.mongodb.net/MERN?retryWrites=true&w=majority&appName=MERN
 
-FRONTEND_URL = "http://localhost:5173"
+FRONTEND_URL = "https://kpi-ft5w.onrender.com"
